Need to add my various projects now

--- a/index.html
+++ b/index.html
@@ -21,24 +21,23 @@
 <body>
     <!-- Nav Bar -->
     <div class="navbar-fixed">
-    <nav>
-        <div id="navbar" class="nav-wrapper #424242 grey darken-3">
-            <a href="#" class="brand-logo">Austin's Portfolio</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#header">About Me</a></li>
-                <li><a href="#languages">Languages</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
+        <nav>
+            <div id="navbar" class="nav-wrapper #424242 grey darken-3">
+                <a href="#" class="brand-logo">Austin's Portfolio</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="#header">About Me</a></li>
+                    <li><a href="#languages">Languages</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
 
 
 
 
-    <!-- Grid Container -->
-    <!-- <div class="grid-container"> -->
+
 
     <div class="parallax-container">
         <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
@@ -49,32 +48,41 @@
         <p>Welcome, my name's Austin here is some info about me and my coding experience.</p>
         <br>
         <ul class="collapsible popout" id="aboutMe">
-                <li>
-                    <div class="collapsible-header">A bit about me</div>
-                    <div class="collapsible-body"><span>My background previously before going through the Rutger's coding boot camp was in project management, as a desire to go from simply managing and directing the outset of a project, I craved to be more hands on.</span></div>
-                </li>
-                <li>
-                    <div class="collapsible-header">Why I code</div>
-                    <div class="collapsible-body"><span>I have worked with building data bases in the past and have always enjoyed working with data and building out processes. I found myself at a point where I was struggling to get excel and access to do what I needed and display it in a visually appealing and intuitive way. To that end I realized I wanted to be able to truly be able to build out process and decided to pursue web development.</span></div>
-                </li>
-                <li>
-                    <div class="collapsible-header">My passions</div>
-                    <div class="collapsible-body"><span>Like I said I love working with data and found my passion working with the back-end of web development. In a way I knew I would gravitate towards back-end web dev due to the fact I always ended up working on refining processes and ensuring efficiency both at the out set and down the line.</span></div>
-                </li>
-            </ul>
+            <li>
+                <div class="collapsible-header">A bit about me</div>
+                <div class="collapsible-body"><span>My background previously before going through the Rutger's coding boot
+                        camp was in project management, as a desire to go from simply managing and directing the outset of
+                        a project, I craved to be more hands on.</span></div>
+            </li>
+            <li>
+                <div class="collapsible-header">Why I code</div>
+                <div class="collapsible-body"><span>I have worked with building data bases in the past and have always enjoyed
+                        working with data and building out processes. I found myself at a point where I was struggling to
+                        get excel and access to do what I needed and display it in a visually appealing and intuitive way.
+                        To that end I realized I wanted to be able to truly be able to build out process and decided to pursue
+                        web development.</span></div>
+            </li>
+            <li>
+                <div class="collapsible-header">My passions</div>
+                <div class="collapsible-body"><span>Like I said I love working with data and found my passion working with
+                        the back-end of web development. In a way I knew I would gravitate towards back-end web dev due to
+                        the fact I always ended up working on refining processes and ensuring efficiency both at the out
+                        set and down the line.</span></div>
+            </li>
+        </ul>
     </div>
 
     <!-- <div > -->
 
 
-            
-        <!-- </div> -->
+
+    <!-- </div> -->
 
     <div class="parallax-container">
         <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
     </div>
 
-    
+
 
 
 
@@ -93,125 +101,134 @@
 
     <!-- Parallax -->
     <div class="parallax-container">
-            <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
-        </div>
-
-        <div id="portfolio" class="section scrollspy">
-            <h2>Portfolio</h2>
-            <p>Here are some projects I have worked on and built.</p>
-        </div>
-    <div id="card1" class="card">
-        <div class="card-image">
-            <img src="./assets/triviagame.jpg">
-            <span id="card-title" class="card-title">Trivia Game</span>
-        </div>
-        <div class="card-content">
-            <p>A nerdy timed trivia game, can you get all the questions correct?</p>
-        </div>
-        <div class="card-action">
-            <a href="https://auztin410.github.io/TriviaGame/">GitHub Link</a>
-        </div>
+        <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
     </div>
 
-    <div id="card2" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
+    <div id="portfolio" class="section scrollspy">
+        <h2>Portfolio</h2>
+        <p>Here are some projects I have worked on and built.</p>
+    </div>
+    <!-- Grid Container -->
+    <div class="grid-container">
+
+        <div id="card1" class="card">
+            <div class="card-image">
+                <img src="./assets/triviagame.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Trivia Game</span>
+            </div>
+            <div class="card-content">
+                <p>A nerdy timed trivia game, can you get all the questions correct?</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/TriviaGame/">GitHub Link</a>
+            </div>
         </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
+
+        <div id="card2" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
         </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
+
+        <div id="card3" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
         </div>
+
+        <div id="card4" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+
+        <div id="card5" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+
+        <div id="card6" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+
+        <div id="card7" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+
+        <div id="card8" class="card">
+            <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
+                    require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">This is a link</a>
+            </div>
+        </div>
+
     </div>
 
-    <div id="card3" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
+    <footer id="footer" class="page-footer #424242 grey darken-3">
+        <div class="container">
+            Created By Austin Saflarske
         </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <div id="card4" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <div id="card5" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <div id="card6" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <div id="card7" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <div id="card8" class="card">
-        <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <span class="card-title">Card Title</span>
-        </div>
-        <div class="card-content">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require
-                little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-            <a href="#">This is a link</a>
-        </div>
-    </div>
-
-    <!-- </div> -->
+    </footer>
 </body>
 <!-- jQuery CDN -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
