Just need to do some styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- Materialize fonts/icons CDN -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Compiled and minified CSS -->
@@ -108,6 +111,12 @@
         <h2>Portfolio</h2>
         <p>Here are some projects I have worked on and built.</p>
     </div>
+
+    <!-- Parallax -->
+    <div class="parallax-container">
+            <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
+        </div>
+
     <!-- Grid Container -->
     <div class="grid-container">
 
@@ -126,102 +135,224 @@
 
         <div id="card2" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/weirdwideweb.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Weird Wide Web</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>
+                    A group project that is a central place to jump down the rabbit hole and discover some amazingly weird entries, and submit
+                    some yourself.
+                </p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://guarded-meadow-97753.herokuapp.com/">Heroku Link</a>
             </div>
         </div>
 
         <div id="card3" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/moviewatchlist.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Movie Watch List</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>Have a list of movies you really want to watch? keep track of them, and search for new movies to add.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://aqueous-island-21695.herokuapp.com/">Heroku Link</a>
             </div>
         </div>
 
         <div id="card4" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/rickandmortyquiz.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Rick and Morty Quiz</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>Want to find out what character you are from Rick and Morty? Take this quiz and see if you can figure
+                    out how to become Rick.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://salty-hollows-71254.herokuapp.com/">Heroku Link</a>
             </div>
         </div>
 
         <div id="card5" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/moviescraping.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Upcoming Movies</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>A simple app that scrapes IMDB for new upcoming movies and allows you to right notes for each movie.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://shrouded-spire-92285.herokuapp.com/">Heroku Link</a>
             </div>
         </div>
 
         <div id="card6" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="assets/pokedex.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Pokedex App</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>A group project creating a functional Pokedex, with some side ideas thrown in.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://whispering-temple-43243.herokuapp.com/">Heroku link</a>
             </div>
         </div>
 
         <div id="card7" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/liri.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Liri</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>A pure Node.js application that simulates Siri's functionality with api calls.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://github.com/auztin410/Liri-Node-App">GitHub Link</a>
             </div>
         </div>
 
         <div id="card8" class="card">
             <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="./assets/bamazon.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Bamazon</span>
             </div>
             <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I
-                    require little markup to use effectively.</p>
+                <p>A pure Node.js application that simulates a purchasing and restocking system like Amazon.</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="https://github.com/auztin410/bamazon">GitHub Link</a>
             </div>
         </div>
 
+        <div id="card9" class="card">
+            <div class="card-image">
+                <img src="./assets/trains.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Train Schedule</span>
+            </div>
+            <div class="card-content">
+                <p>A train arrival application, check when the next train will arrive and add additional trains.</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/Train-Schedule/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card10" class="card">
+            <div class="card-image">
+                <img src="./assets/clicking.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Clicking Memory Game</span>
+            </div>
+            <div class="card-content">
+                <p>A clicking memory game using React, can you click all 8 characters without clicking the same one twice?</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/Click-Memory-Game/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card11" class="card">
+            <div class="card-image">
+                <img src="./assets/giphy.jpg" id="cardImage">
+                <span id="card-title" class="card-title">GIPHY API</span>
+            </div>
+            <div class="card-content">
+                <p>A image/gif display application utilizing GIPHY api.</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/GIPHY-API/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card12" class="card">
+            <div class="card-image">
+                <img src="./assets/psychic.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Psychic Game</span>
+            </div>
+            <div class="card-content">
+                <p>Are you a psychic? Try and guess the right number to find out.</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/Psychic-Game/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card13" class="card">
+            <div class="card-image">
+                <img src="./assets/potion.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Potion Game</span>
+            </div>
+            <div class="card-content">
+                <p>Click the start button to begin a round, and try and reach the set number, but watch out the potions have
+                    different values each round.</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/Crystal-Game/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card14" class="card">
+            <div class="card-image">
+                <img src="./assets/goblin.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Goblin Battle</span>
+            </div>
+            <div class="card-content">
+                <p>Battle against a goblin in a pure Node.js text adventure style game, select a number and try to match
+                    the goblins attack number or else..</p>
+            </div>
+            <div class="card-action">
+                <a href="https://github.com/auztin410/DnD-Node-Game">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card15" class="card">
+            <div class="card-image">
+                <img src="./assets/bingo.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Corporate Bingo</span>
+            </div>
+            <div class="card-content">
+                <p>Hit randomize button and print the page and you are all ready to play corporate bingo, during the next
+                    meeting.
+                </p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/Bingo-Game/">GitHub Link</a>
+            </div>
+        </div>
+
+        <div id="card16" class="card">
+            <div class="card-image">
+                <img src="./assets/ferrethawk.jpg" id="cardImage">
+                <span id="card-title" class="card-title">Class Webpage</span>
+            </div>
+            <div class="card-content">
+                <p>Our class web page had problems with homework submission times, so we decided to build a better version,
+                    code named FerretHawk.</p>
+            </div>
+            <div class="card-action">
+                <a href="https://auztin410.github.io/FerretHawk/">GitHub Link</a>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Parallax -->
+    <div class="parallax-container">
+        <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
+    </div>
+
+    <div id="webpages" class="section scrollspy">
+    <span id="email">Email<i class="fas fa-envelope"></i></span>
+    <span id="linkedin">Linked<i class="fab fa-linkedin"></i></i></span>
+    <span id="github">GitHub<i class="fab fa-github"></i></span>
+    </div>
+
+    <!-- Parallax -->
+    <div class="parallax-container">
+        <div class="parallax"><img src="./assets/abstract-ai-art-373543.jpg"></div>
     </div>
 
     <footer id="footer" class="page-footer #424242 grey darken-3">
