--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
 
     <div class="parallax-container">
+        <div id="quote">
+        <p id="words">"What is now proved was once only imagined"</p>
+        <strong id="author"><p>-William Blake</p></strong>
+        </div>
         <div class="parallax"><img src="./assets/futurecity.jpg"></div>
     </div>
 
@@ -52,9 +56,9 @@
         <h2>Full Stack Web Developer</h2>
         <p>Welcome, my name's Austin here is some info about me and my coding experience.</p>
         <br>
-        <span id="email">Email<i class="fas fa-envelope"></i></span>
-        <span id="linkedin">Linked<i class="fab fa-linkedin"></i></i></span>
-        <span id="github">GitHub<i class="fab fa-github"></i></span>
+        <a href="auztin410@gmail.com"><span id="email" class="pulse">Email<i class="fas fa-envelope"></i></span></a>
+        <a href="www.linkedin.com/in/austin-saflarske-24a12087"><span id="linkedin" class="pulse">Linked<i class="fab fa-linkedin"></i></i></span></a>
+        <a href="https://github.com/auztin410"><span id="github" class="pulse">GitHub<i class="fab fa-github"></i></span></a>
     </div>
 
     <div id="languages" class="section scrollspy">
