--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <p>Welcome, my name's Austin here is some info about me and my coding experience.</p>
         <br>
         <a href="auztin410@gmail.com" target="_blank"><span id="email" class="pulse">Email<i class="fas fa-envelope"></i></span></a>
-        <a href="www.linkedin.com/in/austin-saflarske-24a12087"><span id="linkedin" class="pulse">Linked<i class="fab fa-linkedin"></i></i></span></a>
-        <a href="https://github.com/auztin410"><span id="github" class="pulse">GitHub<i class="fab fa-github"></i></span></a>
+        <a href="www.linkedin.com/in/austin-saflarske-24a12087" target="_blank"><span id="linkedin" class="pulse">Linked<i class="fab fa-linkedin"></i></i></span></a>
+        <a href="https://github.com/auztin410" target="_blank"><span id="github" class="pulse">GitHub<i class="fab fa-github"></i></span></a>
     </div>
 
     <div id="languages" class="section scrollspy">
