--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
             <div id="navbar" class="nav-wrapper">
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a class="nav-color" href="#header">Contacts</a></li>
+                    <li><a class="nav-color" href="#header">Contact</a></li>
                     <li><a class="nav-color" href="#languages">Skills</a></li>
                     <li><a class="nav-color" href="#cardImage">Portfolio</a></li>
                 </ul>
