Some styles to about me section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li><a class="nav-color" href="#header">Contact</a></li>
                     <li><a class="nav-color" href="#languages">Skills</a></li>
                     <li><a class="nav-color" href="#cardImage">Portfolio</a></li>
+                    <li><a class="nav-color" href="#about-me">About Me</a></li>
                 </ul>
             </div>
         </nav>
@@ -370,17 +371,17 @@
 
 
 
-    <div id="webpages" class="section scrollspy">
+    <div id="about-me" class="section scrollspy">
 
         <ul class="collapsible popout" id="aboutMe">
             <li>
-                <div class="collapsible-header">A bit about me</div>
+                <div id="section" class="collapsible-header">A bit about me</div>
                 <div class="collapsible-body"><span>My background previously before going through the Rutger's coding boot
                         camp was in project management, as a desire to go from simply managing and directing the outset of
                         a project, I craved to be more hands on.</span></div>
             </li>
             <li>
-                <div class="collapsible-header">Why I code</div>
+                <div id="section" class="collapsible-header">Why I code</div>
                 <div class="collapsible-body"><span>I have worked with building data bases in the past and have always enjoyed
                         working with data and building out processes. I found myself at a point where I was struggling to
                         get excel and access to do what I needed and display it in a visually appealing and intuitive way.
@@ -388,7 +389,7 @@
                         web development.</span></div>
             </li>
             <li>
-                <div class="collapsible-header">My passions</div>
+                <div id="section" class="collapsible-header">My passions</div>
                 <div class="collapsible-body"><span>Like I said I love working with data and found my passion working with
                         the back-end of web development. In a way I knew I would gravitate towards back-end web dev due to
                         the fact I always ended up working on refining processes and ensuring efficiency both at the out
