More styling changes

--- a/index.html
+++ b/index.html
@@ -46,25 +46,26 @@
 
     <div class="parallax-container">
         <div id="quote">
-        <p id="words">"What is now proved was once only imagined"</p>
-        <strong id="author"><p>-William Blake</p></strong>
+            <p id="words">"What is now proved was once only imagined"</p>
+            <strong id="author"><p>-William Blake</p></strong>
         </div>
-        <div class="parallax"><img src="./assets/futurecity.jpg"></div>
+        <div class="parallax"><img src="./assets/road.jpeg"></div>
     </div>
 
     <div id="header" class="section scrollspy">
         <img id="picture" src="./assets/mecropped.jpg" alt="me">
         <h2>Full Stack Web Developer</h2>
-        <p>Welcome, my name's Austin here is some info about me and my coding experience.</p>
+        <p>Welcome, my name's Austin I am skilled in Full Stack Web Development, with a passion for back-end development.</p>
         <br>
         <a href="mailto:auztin410@gmail.com"><span id="email" class="pulse">Email<i class="fas fa-envelope"></i></span></a>
-        <a href="https://www.linkedin.com/in/austin-saflarske-24a12087/" target="_blank"><span id="linkedin" class="pulse">Linked<i class="fab fa-linkedin"></i></i></span></a>
+        <a href="https://www.linkedin.com/in/austin-saflarske-24a12087/" target="_blank"><span id="linkedin" class="pulse">Linked<i
+                    class="fab fa-linkedin"></i></i></span></a>
         <a href="https://github.com/auztin410" target="_blank"><span id="github" class="pulse">GitHub<i class="fab fa-github"></i></span></a>
     </div>
 
     <div id="languages" class="section scrollspy">
         <h2>Technical Skills</h2>
-        <p>Skilled in full stack web development with a passion for back-end development.</p>
+        <p>Here are the technologies and languages I use.</p>
         <br>
         <svg id="lang">
             <path fill="#E44D26" d="M27.854 116.354l-8.043-90.211h88.378l-8.051 90.197-36.192 10.033z"></path>
@@ -140,7 +141,7 @@
                 <img src="./assets/triviagame.jpg" id="cardImage" class="section scrollspy">
                 <span id="card-title" class="card-title">Trivia Game</span>
             </div>
-            <div  id="card-content" class="card-content">
+            <div id="card-content" class="card-content">
                 <p>A nerdy timed trivia game, can you get all the questions correct?</p>
             </div>
             <div id="card-action" class="card-action">
@@ -382,18 +383,19 @@
             </li>
             <li>
                 <div id="section" class="collapsible-header">Why I code</div>
-                <div class="collapsible-body"><span>I have worked with building data bases in the past and have always enjoyed
-                        working with data and building out processes. I found myself at a point where I was struggling to
-                        get excel and access to do what I needed and display it in a visually appealing and intuitive way.
-                        To that end I realized I wanted to be able to truly be able to build out process and decided to pursue
-                        web development.</span></div>
+                <div class="collapsible-body"><span>
+                        I am a giant nerd for data, building/refining process and efficiency. Along with this I love to create and build applications
+                        and ideas from the ground up, seeing something go from a simple passionate discussion in a room to
+                        a working application is amazing to be apart of.
+                    </span></div>
             </li>
             <li>
                 <div id="section" class="collapsible-header">My passions</div>
-                <div class="collapsible-body"><span>Like I said I love working with data and found my passion working with
-                        the back-end of web development. In a way I knew I would gravitate towards back-end web dev due to
-                        the fact I always ended up working on refining processes and ensuring efficiency both at the out
-                        set and down the line.</span></div>
+                <div class="collapsible-body"><span>
+                    Along with my passion for back-end development and coding, I love to talk to others about code, both on what I know and what I am yet to learn.
+
+                    I am a bit of a gym nut, and enjoy running, watching movies, writing, and crafting the perfect cup of coffee.
+                </span></div>
             </li>
         </ul>
 
