fixing language icons for varying screen size.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-
+    <div>
     <div class="parallax-container">
         <div id="quote">
             <p id="words">"What is now proved was once only imagined"</p>
